--- a/css/shortcode/default.css
+++ b/css/shortcode/default.css
@@ -214,3 +214,993 @@ textarea {
   -webkit-transition: all 0.5s ease-out 0s;
   transition: all 0.5s ease-out 0s;
 }
+
+/*  Text color */
+
+.text-white {
+  color: #fff;
+}
+
+/* Inputs */
+
+input,
+textarea {
+  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+  border: 1px solid #f1f1f1;
+  box-shadow: none;
+  color: #969696;
+  font-size: 14px;
+  height: 42px;
+  padding-left: 17px;
+  width: 100%;
+}
+
+input::-moz-placeholder,
+textarea::-moz-placeholder {
+  color: #969696;
+}
+
+input::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder {
+  color: #969696;
+}
+
+select {
+  width: 100%;
+  background: #eceff8;
+  border: 2px solid #eceff8;
+  height: 45px;
+  padding-left: 10px;
+  box-shadow: 14px;
+  font-size: 14px;
+  color: #626262;
+}
+
+option {
+  background: #fff;
+  border: 0px solid #626262;
+  padding-left: 10px;
+  font-size: 14px;
+}
+
+input:focus,
+textarea:focus {
+  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+  border-color: #f1f1f1;
+}
+
+textarea {
+  height: 100px;
+  padding: 12px 17px;
+  resize: vertical;
+  width: 100%;
+}
+
+#scrollUp {
+  background: #000 none repeat scroll 0 0;
+  bottom: 30px;
+  color: #fff;
+  cursor: pointer;
+  display: none;
+  font-size: 30px;
+  height: 40px;
+  position: fixed;
+  right: 25px;
+  text-align: center;
+  transition: all 0.9s ease 0s;
+  width: 38px;
+  z-index: 9999;
+}
+
+#scrollUp:hover {
+  background: #614a3d;
+}
+
+.m-0 {
+  margin-top: 0;
+  margin-right: 0;
+  margin-bottom: 0;
+  margin-left: 0;
+}
+
+.p-0 {
+  padding-top: 0;
+  padding-right: 0;
+  padding-bottom: 0;
+  padding-left: 0;
+}
+
+/* Margin Top */
+
+.mt-0 {
+  margin-top: 0px;
+}
+.mt-10 {
+  margin-top: 10px;
+}
+
+.mt-15 {
+  margin-top: 15px;
+}
+
+.mt-20 {
+  margin-top: 20px;
+}
+
+.mt-25 {
+  margin-top: 25px;
+}
+
+.mt-30 {
+  margin-top: 30px;
+}
+
+.mt-35 {
+  margin-top: 35px;
+}
+
+.mt-40 {
+  margin-top: 40px;
+}
+
+.mt-45 {
+  margin-top: 45px;
+}
+
+.mt-50 {
+  margin-top: 50px;
+}
+
+.mt-55 {
+  margin-top: 55px;
+}
+
+.mt-60 {
+  margin-top: 60px;
+}
+
+.mt-65 {
+  margin-top: 65px;
+}
+
+.mt-70 {
+  margin-top: 70px;
+}
+
+.mt-75 {
+  margin-top: 75px;
+}
+
+.mt-80 {
+  margin-top: 80px;
+}
+
+.mt-85 {
+  margin-top: 85px;
+}
+
+.mt-90 {
+  margin-top: 90px;
+}
+
+.mt-95 {
+  margin-top: 95px;
+}
+
+.mt-100 {
+  margin-top: 100px;
+}
+
+.mt-105 {
+  margin-top: 105px;
+}
+.mt-110 {
+  margin-top: 110px;
+}
+.mt-115 {
+  margin-top: 115px;
+}
+.mt-120 {
+  margin-top: 120px;
+}
+.mt-125 {
+  margin-top: 125px;
+}
+.mt-130 {
+  margin-top: 130px;
+}
+.mt-135 {
+  margin-top: 135px;
+}
+.mt-140 {
+  margin-top: 140px;
+}
+.mt-145 {
+  margin-top: 145px;
+}
+.mt-150 {
+  margin-top: 150px;
+}
+
+/* Margin Right */
+
+.mr-0 {
+  margin-right: 0px;
+}
+.mr-10 {
+  margin-right: 10px;
+}
+
+.mr-15 {
+  margin-right: 15px;
+}
+
+.mr-20 {
+  margin-right: 20px;
+}
+
+.mr-30 {
+  margin-right: 30px;
+}
+
+.mr-40 {
+  margin-right: 40px;
+}
+
+.mr-50 {
+  margin-right: 50px;
+}
+
+.mr-60 {
+  margin-right: 60px;
+}
+
+.mr-70 {
+  margin-right: 70px;
+}
+
+.mr-80 {
+  margin-right: 80px;
+}
+
+.mr-80 {
+  margin-right: 80px;
+}
+
+.mr-90 {
+  margin-right: 90px;
+}
+
+.mr-100 {
+  margin-right: 100px;
+}
+
+.mr-110 {
+  margin-right: 110px;
+}
+
+.mr-120 {
+  margin-right: 120px;
+}
+
+.mr-130 {
+  margin-right: 130px;
+}
+
+.mr-140 {
+  margin-right: 140px;
+}
+
+.mr-150 {
+  margin-right: 150px;
+}
+
+/* Margin Bottom */
+
+.mb-0 {
+  margin-bottom: 0px;
+}
+.mb-10 {
+  margin-bottom: 10px;
+}
+
+.mb-15 {
+  margin-bottom: 15px;
+}
+
+.mb-20 {
+  margin-bottom: 20px;
+}
+
+.mb-30 {
+  margin-bottom: 30px;
+}
+
+.mb-40 {
+  margin-bottom: 40px;
+}
+
+.mb-50 {
+  margin-bottom: 50px;
+}
+
+.mb-60 {
+  margin-bottom: 60px;
+}
+
+.mb-70 {
+  margin-bottom: 70px;
+}
+
+.mb-80 {
+  margin-bottom: 80px;
+}
+
+.mb-80 {
+  margin-bottom: 80px;
+}
+
+.mb-90 {
+  margin-bottom: 90px;
+}
+
+.mb-100 {
+  margin-bottom: 100px;
+}
+
+.mb-110 {
+  margin-bottom: 110px;
+}
+
+.mb-120 {
+  margin-bottom: 120px;
+}
+
+.mb-130 {
+  margin-bottom: 130px;
+}
+
+.mb-140 {
+  margin-bottom: 140px;
+}
+
+.mb-150 {
+  margin-bottom: 150px;
+}
+
+/* Margin Left */
+
+.ml-0 {
+  margin-left: 0px;
+}
+.ml-10 {
+  margin-left: 10px;
+}
+
+.ml-15 {
+  margin-left: 15px;
+}
+
+.ml-20 {
+  margin-left: 20px;
+}
+
+.ml-30 {
+  margin-left: 30px;
+}
+
+.ml-40 {
+  margin-left: 40px;
+}
+
+.ml-50 {
+  margin-left: 50px;
+}
+
+.ml-60 {
+  margin-left: 60px;
+}
+
+.ml-70 {
+  margin-left: 70px;
+}
+
+.ml-80 {
+  margin-left: 80px;
+}
+
+.ml-80 {
+  margin-left: 80px;
+}
+
+.ml-90 {
+  margin-left: 90px;
+}
+
+.ml-100 {
+  margin-left: 100px;
+}
+
+.ml-110 {
+  margin-left: 110px;
+}
+
+.ml-120 {
+  margin-left: 120px;
+}
+
+.ml-130 {
+  margin-left: 130px;
+}
+
+.ml-140 {
+  margin-left: 140px;
+}
+
+.ml-150 {
+  margin-left: 150px;
+}
+
+/* Padding Top */
+
+.pt-0 {
+  padding-top: 0px;
+}
+
+.pt-5 {
+  padding-top: 5px;
+}
+
+.pt-10 {
+  padding-top: 10px;
+}
+.pt-15 {
+  padding-top: 15px;
+}
+.pt-20 {
+  padding-top: 20px;
+}
+.pt-25 {
+  padding-top: 25px;
+}
+.pt-30 {
+  padding-top: 30px;
+}
+.pt-35 {
+  padding-top: 35px;
+}
+.pt-40 {
+  padding-top: 40px;
+}
+.pt-45 {
+  padding-top: 45px;
+}
+.pt-50 {
+  padding-top: 50px;
+}
+.pt-55 {
+  padding-top: 55px;
+}
+.pt-60 {
+  padding-top: 60px;
+}
+.pt-65 {
+  padding-top: 65px;
+}
+.pt-70 {
+  padding-top: 70px;
+}
+.pt-75 {
+  padding-top: 75px;
+}
+.pt-80 {
+  padding-top: 80px;
+}
+.pt-85 {
+  padding-top: 85px;
+}
+.pt-90 {
+  padding-top: 90px;
+}
+.pt-95 {
+  padding-top: 95px;
+}
+.pt-100 {
+  padding-top: 100px;
+}
+.pt-105 {
+  padding-top: 105px;
+}
+.pt-110 {
+  padding-top: 110px;
+}
+
+.pt-115 {
+  padding-top: 115px;
+}
+
+.pt-120 {
+  padding-top: 120px;
+}
+
+.pt-125 {
+  padding-top: 125px;
+}
+
+.pt-130 {
+  padding-top: 130px;
+}
+
+.pt-135 {
+  padding-top: 135px;
+}
+
+.pt-140 {
+  padding-top: 140px;
+}
+
+.pt-145 {
+  padding-top: 145px;
+}
+
+.pt-150 {
+  padding-top: 150px;
+}
+
+/* Padding Right */
+
+.pr-0 {
+  padding-right: 0px;
+}
+
+.pr-5 {
+  padding-right: 5px;
+}
+
+.pr-10 {
+  padding-right: 10px;
+}
+.pr-15 {
+  padding-right: 15px;
+}
+.pr-20 {
+  padding-right: 20px;
+}
+.pr-30 {
+  padding-right: 30px;
+}
+.pr-40 {
+  padding-right: 40px;
+}
+.pr-50 {
+  padding-right: 50px;
+}
+.pr-60 {
+  padding-right: 60px;
+}
+.pr-70 {
+  padding-right: 70px;
+}
+.pr-80 {
+  padding-right: 80px;
+}
+.pr-90 {
+  padding-right: 90px;
+}
+.pr-100 {
+  padding-right: 100px;
+}
+.pr-110 {
+  padding-right: 110px;
+}
+.pr-120 {
+  padding-right: 120px;
+}
+.pr-130 {
+  padding-right: 130px;
+}
+.pr-140 {
+  padding-right: 140px;
+}
+.pr-150 {
+  padding-right: 150px;
+}
+
+/* Padding Bottom */
+
+.pb-0 {
+  padding-bottom: 0px;
+}
+
+.pb-5 {
+  padding-bottom: 5px;
+}
+
+.pb-10 {
+  padding-bottom: 10px;
+}
+.pb-15 {
+  padding-bottom: 15px;
+}
+.pb-20 {
+  padding-bottom: 20px;
+}
+.pb-30 {
+  padding-bottom: 30px;
+}
+.pb-40 {
+  padding-bottom: 40px;
+}
+.pb-50 {
+  padding-bottom: 50px;
+}
+.pb-60 {
+  padding-bottom: 60px;
+}
+.pb-70 {
+  padding-bottom: 70px;
+}
+.pb-80 {
+  padding-bottom: 80px;
+}
+.pb-90 {
+  padding-bottom: 90px;
+}
+.pb-100 {
+  padding-bottom: 100px;
+}
+.pb-110 {
+  padding-bottom: 110px;
+}
+.pb-120 {
+  padding-bottom: 120px;
+}
+.pb-130 {
+  padding-bottom: 130px;
+}
+.pb-140 {
+  padding-bottom: 140px;
+}
+.pb-150 {
+  padding-bottom: 150px;
+}
+
+/* Padding Left */
+
+.pl-0 {
+  padding-left: 0px;
+}
+
+.pl-5 {
+  padding-left: 5px;
+}
+
+.pl-10 {
+  padding-left: 10px;
+}
+.pl-15 {
+  padding-left: 15px;
+}
+.pl-20 {
+  padding-left: 20px;
+}
+.pl-30 {
+  padding-left: 30px;
+}
+.pl-40 {
+  padding-left: 40px;
+}
+.pl-50 {
+  padding-left: 50px;
+}
+.pl-60 {
+  padding-left: 60px;
+}
+.pl-70 {
+  padding-left: 70px;
+}
+.pl-80 {
+  padding-left: 80px;
+}
+.pl-90 {
+  padding-left: 90px;
+}
+.pl-100 {
+  padding-left: 100px;
+}
+.pl-110 {
+  padding-left: 110px;
+}
+.pl-120 {
+  padding-left: 120px;
+}
+.pl-130 {
+  padding-left: 130px;
+}
+.pl-140 {
+  padding-left: 140px;
+}
+.pl-150 {
+  padding-left: 150px;
+}
+/* Padding Section Padding */
+
+.ptb-0 {
+  padding: 0px;
+}
+
+.ptb-5 {
+  padding: 5px 0;
+}
+
+.ptb-10 {
+  padding: 10px 0;
+}
+.ptb-15 {
+  padding: 15px 0;
+}
+.ptb-20 {
+  padding: 20px 0;
+}
+.ptb-30 {
+  padding: 30px 0;
+}
+.ptb-40 {
+  padding: 40px 0;
+}
+.ptb-50 {
+  padding: 50px 0;
+}
+.ptb-60 {
+  padding: 60px 0;
+}
+.ptb-70 {
+  padding: 70px 0;
+}
+.ptb-80 {
+  padding: 80px 0;
+}
+.ptb-90 {
+  padding: 90px 0;
+}
+.ptb-100 {
+  padding: 100px 0;
+}
+.ptb-110 {
+  padding: 110px 0;
+}
+.ptb-120 {
+  padding: 120px 0;
+}
+.ptb-130 {
+  padding: 130px 0;
+}
+.ptb-140 {
+  padding: 140px 0;
+}
+.ptb-150 {
+  padding: 150px 0;
+}
+
+/* Page Section Image */
+
+.mtb-0 {
+  margin: 0px;
+}
+
+.mtb-5 {
+  margin: 5px 0;
+}
+
+.mtb-10 {
+  margin: 10px 0;
+}
+.mtb-15 {
+  margin: 15px 0;
+}
+.mtb-20 {
+  margin: 20px 0;
+}
+.mtb-30 {
+  margin: 30px 0;
+}
+.mtb-40 {
+  margin: 40px 0;
+}
+.mtb-50 {
+  margin: 50px 0;
+}
+.mtb-60 {
+  margin: 60px 0;
+}
+.mtb-70 {
+  margin: 70px 0;
+}
+.mtb-80 {
+  margin: 80px 0;
+}
+.mtb-90 {
+  margin: 90px 0;
+}
+.mtb-100 {
+  margin: 100px 0;
+}
+.mtb-110 {
+  margin: 110px 0;
+}
+.mtb-120 {
+  margin: 120px 0;
+}
+.mtb-130 {
+  margin: 130px 0;
+}
+.mtb-140 {
+  margin: 140px 0;
+}
+.mtb-150 {
+  margin: 150px 0;
+}
+/* Custom Columns */
+
+.col-1 {
+  width: 10%;
+  float: left;
+}
+.col-2 {
+  width: 20%;
+  float: left;
+}
+.col-3 {
+  width: 30%;
+  float: left;
+}
+.col-4 {
+  width: 40%;
+  float: left;
+}
+.col-5 {
+  width: 50%;
+  float: left;
+}
+.col-6 {
+  width: 60%;
+  float: left;
+}
+.col-7 {
+  width: 70%;
+  float: left;
+}
+.col-8 {
+  width: 80%;
+  float: left;
+}
+.col-9 {
+  width: 90%;
+  float: left;
+}
+.col-10 {
+  width: 100%;
+  float: left;
+}
+
+/* Background variation set */
+
+.bg-white {
+  background: #fff;
+}
+
+.bg-light {
+  background: #f1f1f1;
+}
+
+.bg-koffee {
+  background: #614a3d;
+}
+
+.transparent-bg {
+  background: transparent;
+}
+.bg-1,
+.bg-2,
+.bg-3,
+.bg-4,
+.bg-5 {
+  background-attachment: scroll;
+  background-clip: initial;
+  background-color: rgba(0, 0, 0, 0);
+  background-origin: initial;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.bg-1 {
+  background-image: url();
+}
+.bg-2 {
+  background-image: url();
+}
+
+.bg-3 {
+  background-image: url();
+  background-position: 55% bottom;
+}
+
+.bg-4 {
+  background-image: url();
+  background-position: 51% bottom;
+}
+.bg-5 {
+  background-image: url();
+  background-position: right top;
+}
+
+.overlay-1,
+.overlay-2 {
+  position: relative;
+}
+
+.overlay-1::before,
+.overlay-2::before {
+  background: rgba(0, 0, 0, 0.35) none repeat scroll 0 0;
+  content: "";
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 0;
+}
+
+.overlay-2::before {
+  background: rgba(0, 0, 0, 0.6) none repeat scroll 0 0;
+}
+/* Section Title */
+
+.section-title {
+  margin-bottom: 55px;
+  position: relative;
+}
+
+.section-title > h1 {
+  color: #5e5e5e;
+  font-family: "Courgette", cursive;
+  line-height: 37px;
+  margin-bottom: 15px;
+}
+
+.section-title > span {
+  display: block;
+  margin-bottom: 9px;
+}
+
+.section-title > p {
+  margin: 0;
+}
+
+/* Pagination */
+
+.pagination-content .pagination li a {
+  background: #fff;
+  border: 1px solid #ebebeb;
+  border-radius: 50%;
+  color: #303030;
+  display: inline-block;
+  font-size: 13px;
+  height: 38px;
+  line-height: 42px;
+  margin: 0 9px;
+  padding: 0;
+  text-align: center;
+  width: 38px;
+}
+
+.pagination-content .pagination li a i {
+  font-size: 17px;
+}
+
+.pagination-content .pagination li a:hover,
+.pagination-content .pagination li.active a {
+  background: #ebebeb none repeat scroll 0 0;
+}
