--- a/css/shortcode/footer.css
+++ b/css/shortcode/footer.css
@@ -1,7 +1,6 @@
 .col-lg-3:nth-child(2) .single-footer-widget {
   padding-left: 48px;
 }
-
 .single-footer-widget > h3 {
   color: #fff;
   font-size: 20px;
@@ -26,9 +25,9 @@
   font-size: 16px;
   width: 34px;
 }
-
+/* de 24px para 200px */
 .single-footer-widget > p.margin {
-  margin-bottom: 24px;
+  margin-bottom: 200px;
 }
 
 .open-time {
@@ -50,11 +49,11 @@
   padding: 0 17px;
 }
 
-.newletter-form input#mc-email::-moz-placeholder {
+.newsletter-form input#mc-email::-moz-placeholder {
   color: #eaeaea;
 }
 /* Cuidar no "s" que nao tem no html */
-.newletter-form input[type="email"]::-webkit-input-placeholder {
+.newsletter-form input[type="email"]::-webkit-input-placeholder {
   color: #eaeaea;
 }
 
