--- a/css/shortcode/slider.css
+++ b/css/shortcode/slider.css
@@ -1,3 +1,10 @@
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 .slider-area {
   position: relative;
   overflow: hidden;
@@ -22,12 +29,15 @@
 .banner-content .text-content,
 .banner-content .display-table,
 .banner-content .display-table-cell {
-  height: 100%;
+  image-rendering: auto;
 }
 
 .text-content-wrapper,
 .slider-area img {
   width: 100%;
+  height: 100%;
+  object-fit: contain;
+  display: block;
 }
 
 .banner-content .text-content-wrapper {
@@ -184,6 +194,7 @@
   color: #ffffff;
 }
 .single-slide {
-  background-position: top center;
+  background-position: center;
   background-size: cover;
+  background-repeat: no-repeat;
 }
