--- a/css/shortcode/default.css
+++ b/css/shortcode/default.css
@@ -1271,14 +1271,14 @@ textarea {
 }
 
 .single-testimonial h4 a:hover {
-  color: #614a3d;
+  color: #ca6a32;
 }
 .single-testimonial p {
   color: #fff;
 }
 
 .single-testimonial p:hover {
-  color: #614a3d;
+  color: #ca6a32;
 }
 
 .client-rating i {
